[tool.poetry]
name = "physiokit"
version = "0.1.0"
description = "PhysioKit, process raw ambulatory bio-signals."
license = "BSD-3-Clause"
authors = ["Adam Page <adam.page@ambiq.com>"]
readme = "README.md"
homepage = "https://ambiq.ai"
repository = "https://github.com/AmbiqAI/physiokit"
keywords = ["physiology", "bio-signals", "ambulatory", "wearables"]
packages = [
    { include = "physiokit" },
]

[tool.taskipy.tasks]
format = "isort --profile black physiokit && black --line-length 120 physiokit"
lint = "pylint physiokit"
test = "pytest tests/"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.24.3"
neurokit2 = "^0.2.4"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pylint = "^2.15.2"
pytest = "^7.1.3"
taskipy = "^1.10.3"
pre-commit = "^2.20.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.9"
mkdocstrings-python = "^0.9.0"
mkdocstrings = "^0.21.2"
markdown-include = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120

[tool.pylint.message_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "duplicate-code",
    "invalid-name"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 50
max-locals = 50
max-statements = 80
max-module-lines = 2000
max-attributes = 10
max-branches = 20
