[tool.poetry]
name = "physiokit"
version = "0.8.1"
description = "PhysioKit, process raw ambulatory bio-signals."
license = "BSD-3-Clause"
authors = ["Adam Page <adam.page@ambiq.com>"]
readme = "README.md"
homepage = "https://ambiq.ai"
repository = "https://github.com/AmbiqAI/physiokit"
keywords = ["physiology", "bio-signals", "ambulatory", "wearables"]
packages = [
    { include = "physiokit" },
]

[tool.taskipy.tasks]
format = "isort --profile black physiokit && black --line-length 120 physiokit"
lint = "pylint physiokit"
test = "pytest tests/"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.24.3"
scipy = "^1.10.1"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
pylint = "^3.0.3"
pytest = "^8.0.0"
taskipy = "^1.12.2"
pre-commit = "^3.6.0"
ipython = "^8.20.0"
plotly = "^5.18.0"
ipykernel = "^6.29.0"
nbformat = "^5.9.2"
tabulate = "^0.9.0"
notebook = "^7.0.7"
pandas = "^2.2.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
mkdocstrings-python = "^1.7.3"
markdown-include = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = 'black'

[tool.black]
line-length = 120

[tool.pylint.message_control]
disable = [
    "missing-module-docstring",
    "too-few-public-methods",
    "duplicate-code",
    "invalid-name"
]

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-args = 50
max-locals = 75
max-statements = 100
max-module-lines = 2000
max-attributes = 10
max-branches = 20
