[project]
name = "physiokit"
version = "0.9.0"
description = "PhysioKit, process raw ambulatory bio-signals."
readme = "README.md"
license = { text = "BSD-3-Clause" }

authors = [
  { name = "Adam Page", email = "adam.page@ambiq.com" },
]
keywords = ["physiology", "bio-signals", "ambulatory", "wearables"]
requires-python = ">=3.10,<3.14"

dependencies = [
  "numpy>=1.24.3,<3.0",
  "scipy>=1.10.1,<2.0",
  "requests>=2.31.0,<3.0",
]

[project.urls]
Homepage = 'https://ambiqai.github.io/physiokit'
Source = 'https://github.com/AmbiqAI/physiokit'

[dependency-groups]
dev = [
  "pytest>=8.0.0,<9.0",
  "taskipy>=1.12.2,<2.0",
  "pre-commit>=3.6.0,<4.0",
  "ipython>=8.20.0,<9.0",
  "plotly>=5.18.0,<6.0",
  "ipykernel>=6.29.0,<7.0",
  "nbformat>=5.9.2,<6.0",
  "tabulate>=0.9.0,<1.0",
  "notebook>=7.0.7,<8.0",
  "pandas>=2.2.0,<3.0",
  "ruff>=0.5.1,<1.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.28",
    "mkdocstrings-python>=1.10.5",
    "markdown-include>=0.8.1",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where  = ["."]
include = ["physiokit*"]


[tool.taskipy.tasks]
format = "ruff format"
lint = "ruff check"
test = "pytest tests/"

[tool.ruff]
line-length = 120
extend-exclude = [
]

[tool.ruff.lint]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.pyright]
reportShadowedImports = "none"

[tool.uv]
package = true
